Updated chart to support cert-manager v1.0.0

--- a/chart/tests/ingress_test.yaml
+++ b/chart/tests/ingress_test.yaml
@@ -13,6 +13,45 @@ tests:
       path: metadata.annotations.certmanager\.k8s\.io/issuer
   - isNull:
       path: spec.tls
+- it: should set default annotations with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should set default annotations with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should set default annotations with cert-manager > 0.11.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1alpha2
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
 - it: should set default annotations with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
@@ -22,6 +61,18 @@ tests:
       path: metadata.annotations
       value:
         certmanager.k8s.io/issuer: RELEASE-NAME-rancher
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should set default annotations with cert-manager >= 0.11.0 using parameter
+  set:
+    certmanager.version: 0.12.0
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -36,29 +87,52 @@ tests:
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-- it: should set default annotations with cert-manager >= 0.11.0 using capabilities
+- it: should over write proxy-connect-timeout with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.extraAnnotations:
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should over write proxy-connect-timeout with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.extraAnnotations:
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should over write proxy-connect-timeout with cert-manager >= 0.11.0 using capabilities
   capabilities:
     apiversions:
     - cert-manager.io/v1alpha2
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        cert-manager.io/issuer: RELEASE-NAME-rancher
-        cert-manager.io/issuer-kind: Issuer
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-- it: should set default annotations with cert-manager >= 0.11.0 using parameter
   set:
-    certmanager.version: 0.12.0
+    ingress.extraAnnotations:
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
   asserts:
   - equal:
       path: metadata.annotations
       value:
         cert-manager.io/issuer: RELEASE-NAME-rancher
         cert-manager.io/issuer-kind: Issuer
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
 - it: should over write proxy-connect-timeout with cert-manager < 0.11.0 using capabilities
@@ -76,36 +150,7 @@ tests:
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-- it: should over write proxy-connect-timeout with cert-manager < 0.11.0 using parameter
-  set:
-    certmanager.version: 0.9.0
-    ingress.extraAnnotations:
-      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        certmanager.k8s.io/issuer: RELEASE-NAME-rancher
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-- it: should over write proxy-connect-timeout with cert-manager > 0.11.0 using capabilities
-  capabilities:
-    apiversions:
-    - cert-manager.io/v1alpha2
-  set:
-    ingress.extraAnnotations:
-      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        cert-manager.io/issuer: RELEASE-NAME-rancher
-        cert-manager.io/issuer-kind: Issuer
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-- it: should over write proxy-connect-timeout with cert-manager > 0.11.0 using parameter
+- it: should over write proxy-connect-timeout with cert-manager >= 0.11.0 using parameter
   set:
     certmanager.version: 0.12.0
     ingress.extraAnnotations:
@@ -116,6 +161,19 @@ tests:
       value:
         cert-manager.io/issuer: RELEASE-NAME-rancher
         cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+- it: should over write proxy-connect-timeout with cert-manager < 0.11.0 using parameter
+  set:
+    certmanager.version: 0.9.0
+    ingress.extraAnnotations:
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        certmanager.k8s.io/issuer: RELEASE-NAME-rancher
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -132,6 +190,66 @@ tests:
         hosts:
         - test
         secretName: tls-rancher-ingress
+- it: should set static X-Forwarded-Host header with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+- it: should set static X-Forwarded-Host header with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+- it: should set static X-Forwarded-Host header with cert-manager >= 0.11.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1alpha2
+  set:
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
 - it: should set static X-Forwarded-Host header with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
@@ -146,6 +264,24 @@ tests:
       path: metadata.annotations
       value:
         certmanager.k8s.io/issuer: RELEASE-NAME-rancher
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+- it: should set static X-Forwarded-Host header with cert-manager >= 0.11.0 using parameter
+  set:
+    certmanager.version: 0.12.0
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -168,7 +304,51 @@ tests:
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
         nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_input_headers "X-Forwarded-Host: host.example.com";
-- it: should set static X-Forwarded-Host header with cert-manager > 0.11.0 using capabilities
+- it: should be able to set multiple lines using configurationSnippet with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+        more_set_input_headers "foo: bar";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+          more_set_input_headers "foo: bar";
+- it: should be able to set multiple lines using configurationSnippet with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+        more_set_input_headers "foo: bar";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        cert-manager.io/issuer: RELEASE-NAME-rancher
+        cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+          more_set_input_headers "foo: bar";
+- it: should be able to set multiple lines using configurationSnippet with cert-manager >= 0.11.0 using capabilities
   capabilities:
     apiversions:
     - cert-manager.io/v1alpha2
@@ -177,6 +357,7 @@ tests:
     ingress:
       configurationSnippet: |
         more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+        more_set_input_headers "foo: bar";
   asserts:
   - equal:
       path: metadata.annotations
@@ -188,24 +369,7 @@ tests:
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
         nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_input_headers "X-Forwarded-Host: host.example.com";
-- it: should set static X-Forwarded-Host header with cert-manager > 0.11.0 using parameter
-  set:
-    certmanager.version: 0.12.0
-    hostname: host.example.com
-    ingress:
-      configurationSnippet: |
-        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        cert-manager.io/issuer: RELEASE-NAME-rancher
-        cert-manager.io/issuer-kind: Issuer
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-        nginx.ingress.kubernetes.io/configuration-snippet: |
-          more_set_input_headers "X-Forwarded-Host: host.example.com";
+          more_set_input_headers "foo: bar";
 - it: should be able to set multiple lines using configurationSnippet with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
@@ -227,48 +391,7 @@ tests:
         nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_input_headers "X-Forwarded-Host: host.example.com";
           more_set_input_headers "foo: bar";
-- it: should be able to set multiple lines using configurationSnippet with cert-manager < 0.11.0 using parameter
-  set:
-    certmanager.version: 0.9.0
-    hostname: host.example.com
-    ingress:
-      configurationSnippet: |
-        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
-        more_set_input_headers "foo: bar";
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        certmanager.k8s.io/issuer: RELEASE-NAME-rancher
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-        nginx.ingress.kubernetes.io/configuration-snippet: |
-          more_set_input_headers "X-Forwarded-Host: host.example.com";
-          more_set_input_headers "foo: bar";
-- it: should be able to set multiple lines using configurationSnippet with cert-manager > 0.11.0 using capabilities
-  capabilities:
-    apiversions:
-    - cert-manager.io/v1alpha2
-  set:
-    hostname: host.example.com
-    ingress:
-      configurationSnippet: |
-        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
-        more_set_input_headers "foo: bar";
-  asserts:
-  - equal:
-      path: metadata.annotations
-      value:
-        cert-manager.io/issuer: RELEASE-NAME-rancher
-        cert-manager.io/issuer-kind: Issuer
-        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
-        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-        nginx.ingress.kubernetes.io/configuration-snippet: |
-          more_set_input_headers "X-Forwarded-Host: host.example.com";
-          more_set_input_headers "foo: bar";
-- it: should be able to set multiple lines using configurationSnippet with cert-manager > 0.11.0 using parameter
+- it: should be able to set multiple lines using configurationSnippet with cert-manager >= 0.11.0 using parameter
   set:
     certmanager.version: 0.12.0
     hostname: host.example.com
@@ -282,6 +405,25 @@ tests:
       value:
         cert-manager.io/issuer: RELEASE-NAME-rancher
         cert-manager.io/issuer-kind: Issuer
+        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          more_set_input_headers "X-Forwarded-Host: host.example.com";
+          more_set_input_headers "foo: bar";
+- it: should be able to set multiple lines using configurationSnippet with cert-manager < 0.11.0 using parameter
+  set:
+    certmanager.version: 0.9.0
+    hostname: host.example.com
+    ingress:
+      configurationSnippet: |
+        more_set_input_headers "X-Forwarded-Host: {{ .Values.hostname }}";
+        more_set_input_headers "foo: bar";
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        certmanager.k8s.io/issuer: RELEASE-NAME-rancher
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
