--- a/chart/tests/issuer_test.yaml
+++ b/chart/tests/issuer_test.yaml
@@ -23,11 +23,61 @@ tests:
   - hasDocuments:
       count: 0
     template: issuer-rancher.yaml
+- it: should render letsEncrypt but not rancher with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - hasDocuments:
+      count: 1
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 0
+    template: issuer-rancher.yaml
+- it: should render letsEncrypt but not rancher with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - hasDocuments:
+      count: 1
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 0
+    template: issuer-rancher.yaml
+- it: should render letsEncrypt but not rancher with cert-manager >= 0.11.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1alpha2
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - hasDocuments:
+      count: 1
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 0
+    template: issuer-rancher.yaml
 - it: should render letsEncrypt but not rancher with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
     - certmanager.k8s.io/v1alpha1
   set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - hasDocuments:
+      count: 1
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 0
+    template: issuer-rancher.yaml
+- it: should render letsEncrypt but not rancher with cert-manager >= 0.11.0 using parameter
+  set:
+    certmanager.version: 0.12.0
     ingress.tls.source: letsEncrypt
   asserts:
   - hasDocuments:
@@ -47,58 +97,49 @@ tests:
   - hasDocuments:
       count: 0
     template: issuer-rancher.yaml
-- it: should render letsEncrypt but not rancher with cert-manager > 0.11.0 using capabilities
+- it: should render rancher but not letsEncrypt with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.tls.source: rancher
+  asserts:
+  - hasDocuments:
+      count: 0
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 1
+    template: issuer-rancher.yaml
+- it: should render rancher but not letsEncrypt with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.tls.source: rancher
+  asserts:
+  - hasDocuments:
+      count: 0
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 1
+    template: issuer-rancher.yaml
+- it: should render rancher but not letsEncrypt with cert-manager >= 0.11.0 using capabilities
   capabilities:
     apiversions:
     - cert-manager.io/v1alpha2
   set:
-    ingress.tls.source: letsEncrypt
+    ingress.tls.source: rancher
   asserts:
   - hasDocuments:
-      count: 1
+      count: 0
     template: issuer-letsEncrypt.yaml
   - hasDocuments:
-      count: 0
-    template: issuer-rancher.yaml
-- it: should render letsEncrypt but not rancher with cert-manager > 0.11.0 using parameter
-  set:
-    certmanager.version: 0.12.0
-    ingress.tls.source: letsEncrypt
-  asserts:
-  - hasDocuments:
       count: 1
-    template: issuer-letsEncrypt.yaml
-  - hasDocuments:
-      count: 0
     template: issuer-rancher.yaml
 - it: should render rancher but not letsEncrypt with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
     - certmanager.k8s.io/v1alpha1
-  set:
-    ingress.tls.source: rancher
-  asserts:
-  - hasDocuments:
-      count: 0
-    template: issuer-letsEncrypt.yaml
-  - hasDocuments:
-      count: 1
-    template: issuer-rancher.yaml
-- it: should render rancher but not letsEncrypt with cert-manager < 0.11.0 using parameter
-  set:
-    certmanager.version: 0.9.0
-    ingress.tls.source: rancher
-  asserts:
-  - hasDocuments:
-      count: 0
-    template: issuer-letsEncrypt.yaml
-  - hasDocuments:
-      count: 1
-    template: issuer-rancher.yaml
-- it: should render rancher but not letsEncrypt with cert-manager > 0.11.0 using capabilities
-  capabilities:
-    apiversions:
-    - cert-manager.io/v1alpha2
   set:
     ingress.tls.source: rancher
   asserts:
@@ -119,11 +160,64 @@ tests:
   - hasDocuments:
       count: 1
     template: issuer-rancher.yaml
+- it: should render rancher but not letsEncrypt with cert-manager < 0.11.0 using parameter
+  set:
+    certmanager.version: 0.9.0
+    ingress.tls.source: rancher
+  asserts:
+  - hasDocuments:
+      count: 0
+    template: issuer-letsEncrypt.yaml
+  - hasDocuments:
+      count: 1
+    template: issuer-rancher.yaml
+- it: should set letsEncrypt production by default with cert-manager > 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt production by default with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt production by default with cert-manager >= 0.11.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1alpha2
+  set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
 - it: should set letsEncrypt production by default with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
     - certmanager.k8s.io/v1alpha1
   set:
+    ingress.tls.source: letsEncrypt
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt production by default with cert-manager >= 0.11.0 using parameter
+  set:
+    certmanager.version: 0.12.0
     ingress.tls.source: letsEncrypt
   asserts:
   - equal:
@@ -139,31 +233,57 @@ tests:
       path: spec.acme.server
       value: https://acme-v02.api.letsencrypt.org/directory
     template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt production by default with cert-manager > 0.11.0 using capabilities
+- it: should set letsEncrypt staging with cert-manager > 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.environment: staging
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-staging-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt staging with cert-manager > 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.environment: staging
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-staging-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt staging with cert-manager >= 0.11.0 using capabilities
   capabilities:
     apiversions:
     - cert-manager.io/v1alpha2
   set:
     ingress.tls.source: letsEncrypt
+    letsEncrypt.environment: staging
   asserts:
   - equal:
       path: spec.acme.server
-      value: https://acme-v02.api.letsencrypt.org/directory
-    template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt production by default with cert-manager > 0.11.0 using parameter
-  set:
-    certmanager.version: 0.12.0
-    ingress.tls.source: letsEncrypt
-  asserts:
-  - equal:
-      path: spec.acme.server
-      value: https://acme-v02.api.letsencrypt.org/directory
+      value: https://acme-staging-v02.api.letsencrypt.org/directory
     template: issuer-letsEncrypt.yaml
 - it: should set letsEncrypt staging with cert-manager < 0.11.0 using capabilities
   capabilities:
     apiversions:
     - certmanager.k8s.io/v1alpha1
   set:
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.environment: staging
+  asserts:
+  - equal:
+      path: spec.acme.server
+      value: https://acme-staging-v02.api.letsencrypt.org/directory
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt staging with cert-manager >= 0.11.0 using parameter
+  set:
+    certmanager.version: 0.12.0
     ingress.tls.source: letsEncrypt
     letsEncrypt.environment: staging
   asserts:
@@ -181,27 +301,41 @@ tests:
       path: spec.acme.server
       value: https://acme-staging-v02.api.letsencrypt.org/directory
     template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt staging with cert-manager > 0.11.0 using capabilities
+- it: should set letsEncrypt email address with cert-manager > 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
+  set:
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.email: test@test.org
+  asserts:
+  - equal:
+      path: spec.acme.email
+      value: test@test.org
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt email address with cert-manager >= 0.16.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1beta1
+  set:
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.email: test@test.org
+  asserts:
+  - equal:
+      path: spec.acme.email
+      value: test@test.org
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt email address with cert-manager >= 0.11.0 using capabilities
   capabilities:
     apiversions:
     - cert-manager.io/v1alpha2
   set:
     ingress.tls.source: letsEncrypt
-    letsEncrypt.environment: staging
+    letsEncrypt.email: test@test.org
   asserts:
   - equal:
-      path: spec.acme.server
-      value: https://acme-staging-v02.api.letsencrypt.org/directory
-    template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt staging with cert-manager > 0.11.0 using parameter
-  set:
-    certmanager.version: 0.12.0
-    ingress.tls.source: letsEncrypt
-    letsEncrypt.environment: staging
-  asserts:
-  - equal:
-      path: spec.acme.server
-      value: https://acme-staging-v02.api.letsencrypt.org/directory
+      path: spec.acme.email
+      value: test@test.org
     template: issuer-letsEncrypt.yaml
 - it: should set letsEncrypt email address with cert-manager < 0.11.0 using capabilities
   capabilities:
@@ -215,31 +349,19 @@ tests:
       path: spec.acme.email
       value: test@test.org
     template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt email address with cert-manager < 0.11.0 using parameter
-  set:
-    certmanager.version: 0.9.0
-    ingress.tls.source: letsEncrypt
-    letsEncrypt.email: test@test.org
-  asserts:
-  - equal:
-      path: spec.acme.email
-      value: test@test.org
-    template: issuer-letsEncrypt.yaml
-- it: should set letsEncrypt email address with cert-manager > 0.11.0 using capabilities
-  capabilities:
-    apiversions:
-    - cert-manager.io/v1alpha2
-  set:
-    ingress.tls.source: letsEncrypt
-    letsEncrypt.email: test@test.org
-  asserts:
-  - equal:
-      path: spec.acme.email
-      value: test@test.org
-    template: issuer-letsEncrypt.yaml
 - it: should set letsEncrypt email address with cert-manager > 0.11.0 using parameter
   set:
     certmanager.version: 0.12.0
+    ingress.tls.source: letsEncrypt
+    letsEncrypt.email: test@test.org
+  asserts:
+  - equal:
+      path: spec.acme.email
+      value: test@test.org
+    template: issuer-letsEncrypt.yaml
+- it: should set letsEncrypt email address with cert-manager < 0.11.0 using parameter
+  set:
+    certmanager.version: 0.9.0
     ingress.tls.source: letsEncrypt
     letsEncrypt.email: test@test.org
   asserts:
